fix minor error

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -65,7 +65,7 @@
                         memInput.innerHTML = '<input type="file" name="mem_file" required><br>';
                     } else {
                         memInput.innerHTML = '<label>source mem:</label>'
-                        memInput.innerHTML += '<input type="text" id="mem_txt" name="mem" required>';
+                        memInput.innerHTML += '<input type="text" id="mem_txt" name="mem_txt" required>';
                     }
                 });
             });
