--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -7,7 +7,10 @@
 <body>
   <div class="container">
     <h1>{{ error_message_1 }}</h1>
+    {% if error_message_2 != '' %}
     <p>{{ error_message_2 }}</p>
+    {% endif %}
+
     <button class="btn" onclick="window.history.back()">Go Back</button>
   </div>
 </body>
