--- a/web/static/style.css
+++ b/web/static/style.css
@@ -84,4 +84,13 @@ body {
     color: #4169E1;
     border: 2px solid #4169E1;
   }
+
+  #code_txt {
+    height: 20px;
+    width: 280px;
+    border: 2px solid #4169E1;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 10px #4169E1;
+  }
   
