--- a/web/static/style.css
+++ b/web/static/style.css
@@ -85,7 +85,7 @@ body {
     border: 2px solid #4169E1;
   }
 
-  #code_txt {
+  textarea{
     height: 20px;
     width: 280px;
     border: 2px solid #4169E1;
