fix memory allocation

--- a/web/templates/output_table_simple.html
+++ b/web/templates/output_table_simple.html
@@ -33,7 +33,7 @@
     </table>
     <table style="float:right; width: 45%;">
         <tr>
-            <th>Memory</th>
+            <th>Address</th>
             <th>Value</th>
         </tr>
         {% for line in Memory %}
